# erpnext_customer_statement

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
erpnext_customer_statement/: hooks.py  modules.txt
erpnext_customer_statement/customer_statement/: customer_statement.py
erpnext_customer_statement/erpnext_customer_statement/doctype/erpnext_customer_statement_settings/: erpnext_customer_statement_settings.js  erpnext_customer_statement_settings.json  erpnext_customer_statement_settings.py  test_erpnext_customer_statement_settings.py
erpnext_customer_statement/public/js/: customer.js
