[project]
name = "erpnext_customer_statement"
authors = [
    { name = "Axentor LLC", email = "apps@axentor.co"}
]
description = "ERPNext enable users to Download PDF customer statement via a custom print format."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
